25/3/12
  Fix for firefox menu disappearing after deleting an entry

10/3/12
  Added error checking for desktop names in the switcher
  Added option for the default font in the config.h

8/3/12
  Added option in config.h and rc file to have new window opened at the
   top or bottom of the stack when using attach aside

7/3/12
  Handles multiple transient windows properly now

28/2/12
  Removed remembering previous current window as not woking properly

19/2/12
  Desktop switcher can show number of open windows on unfocused desktops and in fullscreen mode
  Option to show number of windows open in the desktop switcher in the config and rc file
  Fix for windows not mapping when changing default mode from Fullscreen in the rc file
  New window has mouse warped to it if FOLLOW_MOUSE is 0
  prev_current is updated if mouse moves to new window

12/2/12
  Added number of open windows to focused desktop in fullscreen mode
  Clicking on the current desktop in the switcher will focus the next window

11/2/12
  Fixed occasional flicker from focused windows' name in the bar
  Fine tuned fullscreen mode

7/2/12
  When changing desktops move cursor to center of current window before mapping

6/2/12
  Fixed flicker in the external text
  Fixed apps with tabs opening blank windows when opened on an unfocused desktop e.g. firefox

5/2/12
  Changed floating transient window behaviour to always be on top.
  Fixed last window not being mapped sometimes in fullscreen mode

4/2/12
  Added borders to transient windows

3/2/12
  Fix for bar length and master size not correcting after rc file is reread
  Added option in config.h.def to have the bar shown or not at startup but still toggleable

31/1/12
  Fix for bar text not updating when bar is covered and the uncovered

19/1/12
  Desktop switcher updates now when bar switched from top/bottom
  Changing border width does not affect the bar

16/1/12
  In the rc file a line starting with a hash (#) is ignored